# rusty-wallgen

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  color.rs  config.rs  gradiant.rs  image.rs  main.rs  template.rs
