[package]
name = "wallbash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
kmeans_colors = { version = "0.6.0", default-features = false, features = ["palette_color"]}
log = "0.4.22"
minijinja = { version = "2.1.0", default-features = false, features = ["deserialization", "macros", "serde"] }
palette = { version = "0.7.6", default-features = false, features = ["std"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
